모바일 CSS 작업중..

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/main.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/common.js"></script>
@@ -14,6 +15,23 @@
 <script src="js/rollmain.js"></script>
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
+<style>
+	@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+/* 공통영역  */
+	body{
+		font-family: 'Nanum Gothic', '나눔 고딕', sans-serif;
+		font-size: 16px;
+		letter-spacing: -1px;
+		color: #444;
+		word-wrap: break-word;
+		line-height: 1;/*폰트 사이즈 16일 시 라인하이트 1은 16, 2는 32...*/
+	}
+	/* : - 가상선택자, :: - 가상요소 */
+	a:link{color: #444;}
+	a:hover{color: #444;}
+	a:visited{color: #444;}
+	a{text-decoration: none;}
+</style>
 </head>
 <body>
 
