헤더상단로고영역 OK

--- a/index.html
+++ b/index.html
@@ -16,21 +16,46 @@
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
 <style>
-	@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-/* 공통영역  */
-	body{
-		font-family: 'Nanum Gothic', '나눔 고딕', sans-serif;
-		font-size: 16px;
-		letter-spacing: -1px;
-		color: #444;
-		word-wrap: break-word;
-		line-height: 1;/*폰트 사이즈 16일 시 라인하이트 1은 16, 2는 32...*/
-	}
-	/* : - 가상선택자, :: - 가상요소 */
-	a:link{color: #444;}
-	a:hover{color: #444;}
-	a:visited{color: #444;}
-	a{text-decoration: none;}
+/* 모바일영역 */
+	/* 헤더영역 */
+		.on{
+			background: #31353d;
+		}
+		header{
+			height: 90px;
+			text-align: center;
+			z-index: 200;
+			background: rgba(0, 0, 0, 0.5);
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+		}
+		.box_inner{
+			width: 100%;
+			margin: 0 auto;
+		}
+		/* 로고영역 */
+			.header_area h1{
+				float: none;
+				width: 100%;
+				height: 50px;
+				text-align: center;
+				padding: 3px 0 0;
+			}
+			.header_area h1 a{
+				display: inline-block;
+				width: 150px;
+				height: 80px;
+				background: url(./img/main_logo.png) no-repeat;
+				background-size: 150px 40px !important;
+				background-position: center center !important;
+				text-indent: -9999px;
+				overflow: hidden;
+			}
+		/* //로고영역 */
+	/* //헤더영역 */
+/* //모바일영역 */
 </style>
 </head>
 <body>
