--- a/index.html
+++ b/index.html
@@ -54,6 +54,57 @@
 				overflow: hidden;
 			}
 		/* //로고영역 */
+		/* 상단메뉴영역 */
+			.openMOgnb{
+				display: block;
+				position: absolute;
+				left: 15px;
+				top: 35px;
+				width: 25px;
+				height: 16px;
+			}
+			.hdd{
+				text-indent: -9999px;
+				position: absolute;
+			}
+			.openMOgnb span{
+				box-sizing: border-box;
+				display: block;
+				width: 25px;
+				height: 3px;
+				margin-bottom: 4px;
+				border-radius: 10px;
+				background: #fff;
+			}
+			.openMOgnb span + span{
+				width: 17px;
+			}
+			.openMOgnb span:last-child{
+				width: 25px;
+				margin-bottom: 0px;
+			}
+			.header_cont{
+				float: none;
+				width: 100%;
+				background: #31353d;
+				display: block;
+			}
+			.closePop{
+				display: block;
+				position: absolute;
+				right: 0;
+				top: 15px;
+			}
+			.closePop a{
+				display: block;
+				width: 60px;
+				height: 60px;
+				text-indent: -9999px;
+				overflow: hidden;
+				background: url(./img/btn_closeMenu.png) no-repeat;
+				background-size: 60px;
+			}
+		/* //상단메뉴영역 */
 	/* //헤더영역 */
 /* //모바일영역 */
 </style>
