--- a/index.html
+++ b/index.html
@@ -104,6 +104,54 @@
 				background: url(./img/btn_closeMenu.png) no-repeat;
 				background-size: 60px;
 			}
+			.util{padding: 20px;}
+			.header_cont a{color: #fff; font-size: 16px;}
+			.util li{float: left;}
+			.util li::after{
+				content: '|';
+				display: inline-block;
+				padding: 0 10px;
+				color: #a2a2a3;
+				position: relative;
+				font-size: 10px;
+				top: -2px;
+			}
+			.util li:last-child::after{
+				content: '';
+				display: none;
+			}
+			.gnb{
+				float: none;
+				box-sizing: border-box;
+				padding-top: 0px;
+				height: auto;
+				border-top: 1px solid #83868b;
+			}
+			.gnb li{
+				float: left;
+				width: 50%;
+				text-align: left;
+				box-sizing: border-box;
+				border-bottom: 1px solid #83868b;
+			}
+			.gnb li a{
+				display: block;
+				padding: 0 0 0 65px;
+				height: 60px;
+				line-height: 60px;
+				background: url(./img/ico_gnb01.png) no-repeat 10px center;
+				background-size: 49px 56px;
+			}
+			.gnb_depth{display: none;}
+			.gnb li + li a{
+				background-image: url(./img/ico_gnb02.png);
+			}
+			.gnb li + li + li a{
+				background-image: url(./img/ico_gnb03.png);
+			}
+			.gnb li + li + li + li a{
+				background-image: url(./img/ico_gnb04.png);
+			}
 		/* //상단메뉴영역 */
 	/* //헤더영역 */
 /* //모바일영역 */
