--- a/index.html
+++ b/index.html
@@ -17,7 +17,78 @@
 <!-- //슬라이드용 --> 
 <style>
 /* 모바일영역 */
-
+	/* 본문 컨테이너 영역 */
+	#container, #footer, .hdd, .quick_area{
+		text-align: center;
+	}
+	#container{
+		position: relative;
+		width: 100%;
+		padding-bottom: 30px;
+	}
+	/* pc용 슬라이드영역 숨김처리 */
+	.main_rolling_pc{display: none;}
+	/* 모바일 슬라이드 영역 */
+	.main_rolling_mobile{display: block;}
+	.swiper-slide img{width: 100%;}
+	.swiper-pagination-bullet{
+		width: 5px;
+		height: 5px;
+		margin: 0 3px !important;
+		background: #fff;
+		opacity: 0.2;
+	}
+	.swiper-pagination-bullet-active{
+		opacity: 1;
+	}
+	/* //모바일 슬라이드 영역 */
+	/* 갤러리 최근 게시물 영역 */
+	.about_area h2{
+		font-size: 20px;
+		padding: 27px 0 25px;
+	}
+	.about_area h2 b{
+		display: block;
+		padding-top: 10px;
+	}
+	.about_box{background: #fff;}
+	.place_list li{
+		float: none;
+		width: 100%;
+		margin: 0;
+		box-sizing: border-box;
+		padding: 0 20px;
+		top: 0;
+	}
+	.place_list li img{
+		width: 100%;
+	}
+	.place_list li h3{
+		font-weight: bold;
+		font-size: 18px;
+		padding-top: 25px;
+	}
+	.place_list p.txt{
+		padding: 10px 50px 30px;
+		line-height: 1.4;
+		box-sizing: border-box;
+		width: 100%;
+		overflow: hidden;
+		word-break: keep-all;
+		color: #666;
+	}
+	.place_list li .view{
+		padding-bottom: 10px;
+		margin: 0 0 30px;
+		display: inline-block;
+		padding-top: 5px;
+		border-top: 2px solid #333;
+		color: #666;
+	}
+	/* //갤러리 최근 게시물 영역 */
+	/* 공지사항 최근게시물 영역 */
+	/* //공지사항 최근게시물 영역 */
+	/* //본문 컨테이너 영역 */
 /* //모바일영역 */
 </style>
 </head>
@@ -152,7 +223,7 @@
 	
 		<!-- 갤러리최근게시물영역 -->
 		<div class="about_area">
-			<h2>OOOO OOOOO 스프링 <b>TOP 3</b></h2>
+			<h2>갤러리 최근 게시물 <b>TOP 3</b></h2>
 			<div class="about_box">
 				<ul class="place_list box_inner clear">
 					<li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
