컨테이너영역OK

--- a/index.html
+++ b/index.html
@@ -86,8 +86,29 @@
 		color: #666;
 	}
 	/* //갤러리 최근 게시물 영역 */
+
 	/* 공지사항 최근게시물 영역 */
+	.app_line{display: none;}
+	.appbbs_area{
+		padding: 0 20px;
+		text-align: left;
+	}
+	.bbs_line{
+		float: none;
+		width: 100%;
+		padding: 20px 0;
+		border-top: 1px solid #d6d7d8;
+	}
+	.bbs_line h3{
+		font-weight: bold;
+		font-size: 19px;
+	}
+	.bbs_line .notice_recent{padding-top: 10px;}
+	.bbs_line .notice_recent li{
+		padding: 8px 0;
+	}
 	/* //공지사항 최근게시물 영역 */
+
 	/* //본문 컨테이너 영역 */
 /* //모바일영역 */
 </style>
