PC슬라이드 스타일 마무리

--- a/index.html
+++ b/index.html
@@ -57,6 +57,40 @@ li.imglist1{
 li.imglist2{
 	background: url(./img/img_slidecontents03.png) no-repeat;
 }
+.roll_content{position: relative;}
+.roll_content .roll_txtline{
+	position: absolute;
+	left: 0;
+	bottom: 60px;
+	width: 100%;
+	line-height: 1;
+	text-align: center;
+	font-size: 22px;
+	color: #fff;
+	letter-spacing: 2px;
+}
+.rollbtnArea{
+	position: absolute;
+	width: 100%;
+	left: 0;
+	bottom: 25px;
+	z-index: 200;
+}
+.rollingbtn{
+	width: 320px;
+	margin: 0 auto;
+	text-align: center;
+}
+.rollingbtn li.butt0{
+	margin-left: 10px;
+}
+.rollingbtn li{
+	display: inline-block;
+	margin-right: 5px;
+}
+.rollingbtn li a{
+	vertical-align: top;
+}
 /* //슬라이드영역 */
 /* //태블릿영역 */
 }
