PC용 스타일 시작

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/tablet.css">
+<link rel="stylesheet" href="css/pc.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
@@ -17,10 +18,10 @@
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
 <style>
-@media all and (min-width:801px) {
-/* 태블릿영역 */
+@media all and (min-width:1066px) {
+/* PC 영역 */
 
-/* //태블릿영역 */
+/* //PC 영역 */
 }
 </style>
 
