--- a/board_list.html
+++ b/board_list.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/tablet.css">
 <link rel="stylesheet" href="css/pc.css">
+<link rel="stylesheet" href="css/board.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
@@ -100,7 +101,7 @@
 
 	</div>
 	<!-- //메이콘텐츠영역 -->
-	
+
 	<!-- 메인본문영역 -->
 	<div class="bodytext_area box_inner">
 		<!-- 검색폼영역 -->
