글쓰기 작업중..

--- a/board_write.html
+++ b/board_write.html
@@ -14,9 +14,56 @@
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
 <style>
-
-
-
+.appForm{
+	margin: 20px auto;
+	text-align: left;
+}
+.appForm legend{
+	font-size: 0;
+}
+.pilsoo_item::before{
+	top: 1px;
+	content: '*';
+	display: inline-block;
+	position: absolute;
+	left: 5px;
+	width: 15px;
+	font-weight: bold;
+	font-size: 17px;
+	color: #f00;
+}
+.info_pilsoo{
+	position: relative;
+	padding-left: 20px;
+	padding-bottom: 10px;
+	border-bottom: 2px solid #000;
+	font-size: 15px;
+	color: #f00;
+}
+.app_list{
+	padding: 10px 0;
+	border-bottom: 1px solid #ccc;
+}
+.app_list li{
+	position: relative;
+	padding: 10px 0;
+	border-bottom: 1px solid #ccc;
+}
+.app_list li .tit_lbl{
+	float: none;	
+	line-height: 30px;
+	position: relative;
+	box-sizing: border-box;
+	padding-left: 20px;
+	font-weight: bold;
+	font-size: 17px;
+	letter-spacing: -2px;
+}
+.app_content{
+	float: none;
+	width: auto;
+	letter-spacing: -2px;
+}
 </style>
 <script>
 $(document).ready(function() {
@@ -101,6 +148,38 @@ $(document).ready(function() {
 			</div>
 		</div>	
 		<!-- //메인상단위치표시영역 -->
+		
+		<!-- 메인본문영역 -->
+		<div class="bodytext_area box_inner">
+			<!-- 폼영역 -->
+			<form name="board_write" method="post" action="board_write.html" class="appForm">
+				<fieldset>
+					<legend>상담문의 입력 양식</legend>
+					<p class="info_pilsoo pilsoo_item">필수입력</p>
+					<ul class="app_list">
+						<li class="clear">
+							<label for="title_lbl" class="tit_lbl pilsoo_item">제목</label>
+							<div class="app_content"><input type="text" name="title" class="w100p" id="title_lbl" placeholder="제목을 입력해주세요" required/></div>
+						</li>
+						<li class="clear">
+							<label for="content_lbl" class="tit_lbl">내용</label>
+							<div class="app_content"><textarea name="content" id="content_lbl" class="w100p" placeholder="내용을 입력해주세요." required></textarea></div>
+						</li>
+						<li class="clear">
+							<label for="name_lbl" class="tit_lbl pilsoo_item">작성자명</label>
+							<div class="app_content"><input type="text" name="name" class="w100p" id="name_lbl" placeholder="이름을 입력해주세요" required/></div>
+						</li>
+
+					</ul>
+					<p class="btn_line">
+					<button class="btn_baseColor">등록</button>
+					<a href="board_list.html" class="btn_baseColor">목록</a>
+					</p>	
+				</fieldset>
+			</form>
+			<!-- //폼영역 -->
+		</div>
+		<!-- //메인본문영역 -->
 	</div>
 	<!-- //메이콘텐츠영역 -->
 	
