--- a/board_write.html
+++ b/board_write.html
@@ -14,6 +14,7 @@
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
 <style>
+/* 게시판 글쓰기 폼 */
 .appForm{
 	margin: 20px auto;
 	text-align: left;
@@ -62,8 +63,37 @@
 .app_content{
 	float: none;
 	width: auto;
-	letter-spacing: -2px;
+	border: 1px solid #ccc;
 }
+.app_content input{
+	border: none;
+	width: 100% !important;
+	box-sizing: border-box;
+	display: inline-block;
+	height: 45px;
+	padding: 0 10px;
+	background-color: #fff;
+	line-height: normal;
+	font-size: 15px;
+}
+.appForm textarea{
+	height: 130px;
+	box-sizing: border-box;
+	padding: 10px;
+	font-size: 15px;
+	letter-spacing: -1px;
+	color: #444;
+	border: none;
+}
+.appForm textarea::placeholder{color: #999;}
+.btn_baseColor{margin-top: 10px;}
+
+@media all and (min-width: 801px;){
+/* 태블릿 + PC용 */
+
+/* //태블릿 + PC용 */	
+}
+/* //게시판 글쓰기 폼 */
 </style>
 <script>
 $(document).ready(function() {
@@ -162,7 +192,7 @@ $(document).ready(function() {
 							<div class="app_content"><input type="text" name="title" class="w100p" id="title_lbl" placeholder="제목을 입력해주세요" required/></div>
 						</li>
 						<li class="clear">
-							<label for="content_lbl" class="tit_lbl">내용</label>
+							<label for="content_lbl" class="tit_lbl pilsoo_item">내용</label>
 							<div class="app_content"><textarea name="content" id="content_lbl" class="w100p" placeholder="내용을 입력해주세요." required></textarea></div>
 						</li>
 						<li class="clear">
