--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
 <style>
-	
+
 </style>
-
 <script>
+$(document).ready(function() {
+	
+});
 </script>
-
 </head>
 <body>
 
@@ -98,7 +99,7 @@
                     <li class="imglist0">
                         <div class="roll_content">
                             <a href="javascript:;">
-                            <img src="./img/maple.jpg" alt="OOOO OOOOO OOOO OOOOO, 스프링... OOOO OOOOO?"></a>
+                            <img src="img/maple.jpg" alt="OOOO OOOOO OOOO OOOOO, 스프링... OOOO OOOOO?"></a>
                             <p class="roll_txtline">OOOO OOOOOOOOO OOOOOOOOO OOOOO</p>
                         </div>
                     </li>
@@ -156,7 +157,7 @@
 	
 		<!-- 갤러리최근게시물영역 -->
 		<div class="about_area">
-			<h2>갤러리 최근 게시물 <b>TOP 3</b></h2>
+			<h2>겔러리 최근 게시물 <b>TOP 3</b></h2>
 			<div class="about_box">
 				<ul class="place_list box_inner clear">
 					<li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
