--- a/board_write.html
+++ b/board_write.html
@@ -18,12 +18,11 @@
 </style>
 <script>
 $(document).ready(function() {
-
+	
 });
 </script>
 </head>
 <body>
-
 <!-- 헤더에서푸터까지 -->
 <div id="wrap">
 	<!-- 헤더상단메뉴영역영역 -->
@@ -99,11 +98,11 @@ $(document).ready(function() {
 			</div>
 		</div>	
 		<!-- //메인상단위치표시영역 -->
-		
+
 		<!-- 메인본문영역 -->
 		<div class="bodytext_area box_inner">
 			<!-- 폼영역 -->
-			<form name="board_write" method="post" action="board_write.html" class="appForm">
+			<form method="POST" name="board_write" action="board_write.html" class="appForm">
 				<fieldset>
 					<legend>상담문의 입력 양식</legend>
 					<p class="info_pilsoo pilsoo_item">필수입력</p>
@@ -133,7 +132,6 @@ $(document).ready(function() {
 		<!-- //메인본문영역 -->
 	</div>
 	<!-- //메이콘텐츠영역 -->
-	
 	<!-- 푸터메뉴및사업자정보영역 -->
 	<footer>
 		<div class="foot_area box_inner">
