--- a/join.html
+++ b/join.html
@@ -10,67 +10,13 @@
 <link rel="stylesheet" href="css/tablet.css">
 <link rel="stylesheet" href="css/pc.css">
 <link rel="stylesheet" href="css/board.css">
+<link rel="stylesheet" href="css/join.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
 <!-- html5가 아닌 유효성 검사 라이브러리(아래) -->
 <script src="js/jquery.validate.js"></script>
 <script src="js/additional-methods.js"></script>
-<style>
-label{vertical-align: middle;}
-.radio_area{
-	box-sizing: border-box;
-	padding-left: 20px;
-	height: 40px;
-	padding-top: 10px;
-}
-.css-radio{
-	overflow: hidden;
-	position: absolute;
-	left: -1000px;
-	width: 1px;
-	height: 1px;
-}
-.css-radio + label{
-	display: inline-block;
-	padding-left: 20px !important;
-	margin-right: 20px;
-	background: url(./img/bg_radio.png) no-repeat 0 0;
-	cursor: pointer;
-	font-size: 15px;
-}
-.css-radio:checked + label{
-	background-position: 0 -50px;
-}
-.checkbox_area{
-	padding-left: 20px;
-	height: 40px;
-	padding-top: 10px;
-	box-sizing: border-box;
-}
-.css_checkbox{
-	overflow: hidden;
-	position: absolute;
-	left: -1000px;
-	width: 1px;
-	height: 1px;
-}
-.css_checkbox + label{
-	display: inline-block;
-	height: 20px;
-	padding-left: 30px !important;
-	line-height: 20px !important;
-	background: url(./img/bg_checkbox.png) no-repeat 0 0;
-	background-size: 20px;
-	cursor: pointer;
-	vertical-align: middle;
-	font-size: 15px;
-	-moz-user-select: none;
-}
-.css_checkbox:checked + label{
-	background-position: 0 -20px;
-}
-</style>
 <script>
 $(document).ready(function() {
 	$(".appForm").validate();
@@ -202,7 +148,7 @@ $(document).ready(function() {
 						<li class="clear">
 							<label for="agree_lbl" class="tit_lbl pilsoo_item">개인정보 활용동의</label>
 							<div class="app_content checkbox_area">
-								<input type="checkbox" name="agree" class="css_checkbox" id="agree_lbl" required/>
+								<input type="checkbox" name="agree" class="css_checkbox" id="agree_lbl" required checked/>
 								<label for="agree_lbl">동의함</label>
 							</div>
 						</li>
