회원가입폼 마무리

--- a/join.html
+++ b/join.html
@@ -148,8 +148,8 @@ $(document).ready(function() {
 						<li class="clear">
 							<label for="agree_lbl" class="tit_lbl pilsoo_item">개인정보 활용동의</label>
 							<div class="app_content checkbox_area">
-								<input type="checkbox" name="agree" class="css_checkbox" id="agree_lbl" required checked/>
-								<label for="agree_lbl">동의함</label>
+								<input type="checkbox" name="agree" class="css_checkbox" id="agree_lbl" required/>
+								<label for="agree_lbl" class="agree">동의함</label>
 							</div>
 						</li>
 
