--- a/mypage.html
+++ b/mypage.html
@@ -27,6 +27,17 @@
 		background: #000;
 		color: #fff;
 	}
+	.gender{
+		padding: 4px 10px;
+		font-size: 14px;
+	}
+	.radio_area{
+	    padding-left: 5px;
+		padding-top: 5px;
+	}
+	.radio_area input[type="radio"]{display: none;}
+	.radio_area label{display: none;}
+
 </style>
 <script>
 $(document).ready(function() {
@@ -159,6 +170,11 @@ $(document).ready(function() {
 								<label for="man_lbl">남</label>
 								<input type="radio" name="gender" class="css-radio" id="woman_lbl"/>
 								<label for="woman_lbl">여</label>
+								<select name="gender" class="gender" required>
+									<option value="" selected>성별을 선택해주세요</option>
+									<option value="male">남자</option>
+									<option value="female">여자</option>
+								</select>
 							</div>
 						</li>
 						<li class="clear">
