--- a/test.html
+++ b/test.html
@@ -10,7 +10,11 @@
         $(document).ready(function(){
             $("#addElement").click(function(){
                 $(document.body).css("background", "yellow");
-                $("<div><p>제이쿼리</p></div>").appendTo(this);
+                // $("<div><p>제이쿼리</p></div>").appendTo(this);
+                // $(타겟).append("타겟 내부 다음에 추가할 내용")
+                $(this).append("<div><p>내부추가</div></p>")
+                // $(타겟).append("타겟 내부 다음에 추가할 내용")
+                $(this).after("<div><p>외부추가</div></p>")
                 var count = $("div").length;
                 alert("div 태그의 개수는 " + count + "개 입니다.");
             });
