--- a/test.html
+++ b/test.html
@@ -19,6 +19,7 @@
                 alert("div 태그의 개수는 " + count + "개 입니다.");
             });
         });
+        테스트
     </script>
 </head>
 <body>
